objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Limit__c</fullName>
        <formula>Requester__r.Contact.SDO_SCOM_OOA_Budget_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>WebCart</referenceTo>
        <relationshipLabel>Commerce Approval Requests</relationshipLabel>
        <relationshipName>Commerce_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Override_Amount__c</fullName>
        <label>Credit Override Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Products_Quantities__c</fullName>
        <label>Products/Quantities</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commerce_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Response</fullName>
                    <default>true</default>
                    <label>Awaiting Response</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Override</fullName>
                </value>
                <value>
                    <fullName>Product/Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commerce Approval Request</label>
    <nameField>
        <displayFormat>CARN-{0000}</displayFormat>
        <label>Commerce Approval Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerce Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>